Fix tag for dark mode

--- a/src/app/components/TagCell/styles.css
+++ b/src/app/components/TagCell/styles.css
@@ -10,6 +10,7 @@
 	border-radius: 8px;
 	padding: 2px 8px;
 	width: fit-content;
+	color: black;
 }
 
 .NLT__tag-content {
